take away scrollbar, fix months overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ a {
 
 #columnLeft {
   width: 10%;
-  height: 100%;
+  height: calc(100% - 20px);
   vertical-align: middle;
   text-align: center;
   position: absolute;
@@ -59,6 +59,7 @@ a {
 #map {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 #months {
@@ -66,6 +67,10 @@ a {
   display: inline-block;
   overflow: auto;
   overflow-y: auto;
+}
+
+#months::-webkit-scrollbar {
+  display: none;
 }
 
 #key {
@@ -130,7 +135,7 @@ a {
   #columnLeft {
     box-shadow: none;
     width: 120px;
-    height: calc(100% - 80px);
+    height: calc(100% - 100px);
   }
 
   #columnMiddle {
@@ -146,6 +151,10 @@ a {
     /* scroll-snap-type: x mandatory; */
     box-shadow: none;
     height: auto;
+  }
+
+  #description {
+    padding-top: 20px;
   }
 
   #key {
